@@ -1005,14 +1005,54 @@ public abstract class EntityResourceTest<T extends EntityInterface, K extends Cr
 
   @Test
   @Execution(ExecutionMode.CONCURRENT)
-  void get_entityWithoutDescriptionFromSearch(TestInfo test)
-      throws HttpResponseException, InterruptedException, IOException {
+  void get_entityWithNullDescriptionFromSearch(TestInfo test)
+          throws InterruptedException, IOException {
     Assumptions.assumeTrue(supportsSearchIndex);
     Assumptions.assumeTrue(
-        Arrays.asList(entityClass.getInterfaces()).contains(EntityInterface.class));
+            Arrays.asList(entityClass.getInterfaces()).contains(EntityInterface.class));
+    // We can't create a Glossary or a Tag without description
+    Assumptions.assumeTrue(!List.of(GLOSSARY, TAG).contains(entityType));
     // Create an entity without description
     K createWithNullDescription = createRequest(test, 1).withDescription(null);
     T entityWithNullDescription = createEntity(createWithNullDescription, ADMIN_AUTH_HEADERS);
+
+    // Search for entities without description
+    RestClient searchClient = getSearchClient();
+    IndexMapping index = Entity.getSearchRepository().getIndexMapping(entityType);
+    Response response;
+    Request request = new Request("GET", String.format("%s/_search", index.getIndexName(null)));
+    String query =
+            "{\"size\":100,\"query\":{\"bool\":{\"should\":[{\"nested\":{\"ignore_unmapped\":true,\"path\":\"columns\",\"query\":{\"bool\":{\"should\":[{\"bool\":{\"must_not\":{\"exists\":{\"field\":\"columns.description\"}}}},{\"bool\":{\"must_not\":{\"wildcard\":{\"columns.description\":\"*\"}}}}]}}}},{\"bool\":{\"should\":[{\"bool\":{\"must_not\":{\"exists\":{\"field\":\"description\"}}}},{\"bool\":{\"must_not\":{\"wildcard\":{\"description\":\"*\"}}}}]}}]}}}";
+    request.setJsonEntity(query);
+    try {
+      waitForEsAsyncOp();
+      response = searchClient.performRequest(request);
+    } finally {
+      searchClient.close();
+    }
+
+    String jsonString = EntityUtils.toString(response.getEntity());
+    HashMap<String, Object> map =
+            (HashMap<String, Object>) JsonUtils.readOrConvertValue(jsonString, HashMap.class);
+    LinkedHashMap<String, Object> hits = (LinkedHashMap<String, Object>) map.get("hits");
+    ArrayList<LinkedHashMap<String, Object>> hitsList =
+            (ArrayList<LinkedHashMap<String, Object>>) hits.get("hits");
+
+    assertTrue(
+            hitsList.stream()
+                    .anyMatch(
+                            hit ->
+                                    ((LinkedHashMap<String, Object>) hit.get("_source"))
+                                            .get("name")
+                                            .equals(createWithNullDescription.getName())));
+  }
+  @Test
+  @Execution(ExecutionMode.CONCURRENT)
+  void get_entityWithEmptyDescriptionFromSearch(TestInfo test)
+      throws InterruptedException, IOException {
+    Assumptions.assumeTrue(supportsSearchIndex);
+    Assumptions.assumeTrue(
+        Arrays.asList(entityClass.getInterfaces()).contains(EntityInterface.class));
     // Create an entity with empty description
     K createWithEmptyDescription = createRequest(test, 2);
     T entityWithEmptyDescription = createEntity(createWithEmptyDescription, ADMIN_AUTH_HEADERS);
@@ -1049,13 +1089,6 @@ public abstract class EntityResourceTest<T extends EntityInterface, K extends Cr
                     ((LinkedHashMap<String, Object>) hit.get("_source"))
                         .get("name")
                         .equals(createWithDescription.getName())));
-    assertTrue(
-        hitsList.stream()
-            .anyMatch(
-                hit ->
-                    ((LinkedHashMap<String, Object>) hit.get("_source"))
-                        .get("name")
-                        .equals(createWithNullDescription.getName())));
     assertTrue(
         hitsList.stream()
             .anyMatch(
